<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search_holo_dark"
        android:orderInCategory="0"
        android:title="@string/tx_03"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_bgservice"
        android:title="@string/tx_64"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/menu_offlinemaps"
        android:title="@string/tx_90"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/tx_15"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/menu_tutorial"
        android:title="@string/tx_50"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/menu_info"
        android:title="@string/tx_65"
        app:showAsAction="never|withText" />
</menu>