<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="#333333"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="image"
                android:gravity="center_vertical|center_horizontal"
                android:scaleType="center"
                android:src="@drawable/ic_launcher" />

            <RelativeLayout
                android:id="@+id/textueber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:id="@+id/textueber1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy="-2"
                    android:shadowRadius="0.1"
                    android:text="SMART"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textueber2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textueber1"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy="-2"
                    android:shadowRadius="0.1"
                    android:text="NAVI"
                    android:textColor="#a6e03c"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/versionName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/textueber"
                android:gravity="center_horizontal"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="-2"
                android:shadowRadius="0.1"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header"
            android:background="#f5f5f5"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="20dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.1"
                android:text="@string/tx_07"
                android:textColor="#4d4d4d"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:autoLink="email"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.1"
                android:text="@string/tx_09"
                android:textColor="#4d4d4d"
                android:textColorLink="#86b530"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:autoLink="web"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.1"
                android:text="@string/tx_19"
                android:textColor="#4d4d4d"
                android:textColorLink="#86b530"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/howto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/info"
            android:layout_marginTop="1dp"
            android:background="#f5f5f5"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="3dp"
                android:paddingTop="10dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.1"
                android:text="@string/tx_08"
                android:textColor="#4d4d4d"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text3"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.1"
                android:text="@string/tx_41"
                android:textColor="#4d4d4d"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/privacLinkInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text7"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.1"
                android:text="@string/tx_102"
                android:textColor="#4d4d4d"
                android:textColorLink="#86b530"
                android:textSize="13sp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>