<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/osmmap_actvity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="true"
    android:orientation="vertical">

    <org.osmdroid.views.MapView
        android:id="@+id/openmapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/mapTextOsm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#bb272c32"
        android:drawableTop="@drawable/back"
        android:gravity="center"
        android:maxLines="5"
        android:padding="3dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="0.1"
        android:textColor="#f3f3f3"
        android:textSize="18sp"
        android:visibility="gone" />

    <View
        android:id="@+id/viewLineOsm"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_above="@+id/mapTextOsm"
        android:background="#bb8dbd25"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listeOsm"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#CC000000"
        android:entries="@array/possetzen2"
        android:gravity="center_horizontal" />

    <ProgressBar
        android:id="@+id/progressBarOsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:onClick="abortGPS"
        android:visibility="gone" />

    <!-- LongPressDialog -->
    <!-- LongPressDialog -->
    <!-- LongPressDialog -->

    <RelativeLayout
        android:id="@+id/longpPressDialogOsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="120dp"
        android:visibility="invisible">

        <RelativeLayout
            android:id="@+id/longPressTitleLayoutOsm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#333333">

            <TextView
                android:id="@+id/longpPressTitleOsm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="-2"
                android:shadowRadius="0.1"
                android:text="@string/tx_18"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/longPressInhaltOsm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longPressTitleLayoutOsm"
            android:background="#e6e6e6">

            <ImageView
                android:id="@+id/longPressImageOsm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="LongPress"
                android:src="@drawable/longpress" />

            <TextView
                android:id="@+id/longpPressTextOsm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/longPressImageOsm"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.1"
                android:text="@string/tx_12"
                android:textColor="#4d4d4d"
                android:textSize="16sp" />

            <Button
                android:id="@+id/longPressButtonOsm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/longpPressTextOsm"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="9dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_dark"
                android:minHeight="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tx_38"
                android:textColor="#F5F5F5"
                android:textStyle="bold" />

            <View
                android:id="@+id/longPressLine2Osm"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/longPressButtonOsm" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- END LongPressDialog -->
    <!-- END LongPressDialog -->
    <!-- END LongPressDialog -->


    <!-- AppRateDialog -->
    <!-- AppRateDialog -->
    <!-- AppRateDialog -->

    <RelativeLayout
        android:id="@+id/appRateDialogOsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="110dp"
        android:background="#f54b4b4b"
        android:visibility="invisible">

        <TextView
            android:id="@+id/appRateTitleOsm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/tx_34"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#aee844" />

        <View
            android:id="@+id/appRateLineOsm"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@+id/appRateTitleOsm"
            android:layout_marginTop="10dp"
            android:background="#aee844" />

        <TextView
            android:id="@+id/appRateTextOsm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appRateLineOsm"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/tx_31"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/starsOsm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appRateTextOsm"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:contentDescription="@string/tx_34"
            android:onClick="clickOnStars"
            android:src="@drawable/stars" />

        <Button
            android:id="@+id/rateButtonOsm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starsOsm"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_dark"
            android:minWidth="170dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tx_39" />

        <Button
            android:id="@+id/rateButton2Osm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rateButtonOsm"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tx_40"
            android:textColor="#F5F5F5"
            android:textStyle="bold" />

        <View
            android:id="@+id/appRateLine2Osm"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/rateButton2Osm" />
    </RelativeLayout>


        <include
            android:id="@+id/toolbar_osm"
            layout="@layout/toolbar" />
</RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabosm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:scaleType="center"
        android:src="@android:drawable/ic_menu_mylocation"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_anchor="@+id/openmapview"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="@android:color/holo_green_light" />
</android.support.design.widget.CoordinatorLayout>